--- a/templates/workshop/edit_subject.html
+++ b/templates/workshop/edit_subject.html
@@ -220,18 +220,18 @@
         {% csrf_token %}
 
         <div class="form-row mt-2">
-            <div class="col-3">
+            <!-- <div class="col-3">
                 <input class='form-control' type="number" id="enumerator" name="enumerator"
                     placeholder="Порядковый номер раздела" required>
-            </div>
-            <div class="col-3">
+            </div> -->
+            <div class="col-6">
                 <input class='form-control' type="text" id="title" name="title" placeholder="Название раздела" required>
             </div>
 
             <div class="col-2 align-self-end">
                 <!-- <button type='submit' value="Create" class="btn btn-info btn-block"> -->
                 <!-- <input type="submit" value="Create" class="btn btn-info btn-block "> -->
-                <input type="submit" value="Создать" class='btn btn-block btn-outline-dark' style="width:fit-content">
+                <input type="submit" value="Создать" class='btn btn-block btn-outline-dark'>
             </div>
         </div>
     </form>
